rendered/nodejs-app/nodejs-app/templates/deployment.yaml
---
# Source: nodejs-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: api
  labels:
    app: nodejs-app
    version: latest
    managed-by: helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
        version: latest
        managed-by: helm
    spec:
      containers:
        - name: nodejs-app
          image: "688567278489.dkr.ecr.ap-southeast-1.amazonaws.com/nodejs-app:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
