rendered/nodejs-app/nodejs-app/templates/service.yaml
---
# Source: nodejs-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
  namespace: api
  labels:
    app: nodejs-app
    version: latest
    managed-by: helm
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
